style.css
* {
    color: white;
    background-color: #181818;
    box-sizing: border-box;
}

body {
    margin: auto;
    width: 50%;
}

header {
    width: inherit;
    position: fixed;
    top: 0;
    z-index: 10;
    text-align: center;
    display: flex;
    justify-content: space-between;
    gap: 10px;
    padding: 10px 0px;
    height: 40px;
    border-bottom: 1px solid #FFF;
}

label {
    min-width: fit-content;
}

button {
    border: 1px solid #FFF;
    border-radius: 5px;
    height: 20px;
}

.timer {
    width: fit-content;
    margin: auto;
}

textarea {
    background-color: white;
    color: black;
    width: 100%;
    border: none;
}

.first {
    margin-bottom: 10px;
}

main {
    width: 100%;
    max-width: 100%;
    margin: auto;
    margin-top: 40px;
    }

h2 {
    margin: 0px;
    padding: 10px 0px 5px 0px;
}

#spec {
    width: 100%;
    height: 40px;
}

footer {
    text-align: center;
    border-top: 1px solid #FFF;
}

@media screen and (max-width: 500px) {
    body {
        width: 90%;
    }
    header {
        flex-direction: column;
        align-items: center;
        height: fit-content;
    }

    button {
        width: 100%;
    }

    main {
        margin-top: 120px;
        padding: 0px 3px
    }

    select {
        text-align: center;
        width: 100%;
    }
}

@media print {
    *{
        color: black;
    }
    header {
        display: none;
    }
}

